6995045: assert(!gch->incremental_collection_failed()) failed: Error, defNewGeneration.cpp:827

Sharpened an assert, introduced in 6896603, that intended to check that the incremental_collection_failed() predicate on the heap was being reset "soon enough".

Reviewed-by: jmasa